<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/textView_titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_label" />

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/title_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView_descLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description_label" />

    <EditText
        android:id="@+id/editText_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/description_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView_tagsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tags_label" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_tags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" />

    <TextView
        android:id="@+id/textView_deadlineLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deadline_label" />

    <EditText
        android:id="@+id/editText_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/deadline_hint"
        android:inputType="date" />

    <TextView
        android:id="@+id/textView_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/date_created_text" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_task_button_label" />

    </LinearLayout>
</LinearLayout>